# llm-for-target-assignment

./: .gitignore  README.md  baseline_enumeration.py  baseline_nearest_first.py  config.py  dataset.py  generate_dataset.py  llm.py  llm_as_heuristic_generator.py  llm_as_optimizer.py  metric.py  prompt.py  requirements.txt  ruff.toml
baseline_enumeration/: Cargo.toml
baseline_enumeration/src/: integer_composition.rs  main.rs
