[package]
name = "baseline_enumeration"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
itertools = "0.14.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
